<resources>
    <string name="app_name">Clothina</string>

    <string name="facebook_app_id">432131261355352</string>
    <string name="fb_login_protocol_scheme">fb432131261355352</string>

    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="full_name">Full Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="email">Your Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">"have an account?  "</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_clothinaa">Welcome Clothinaa</string>
    <string name="dont_have_an_account">"Don't have an account?  "</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="reset_password">Reset password</string>
    <string name="sent_new_password">We will send reset password link to this email</string>
    <string name="submit">Submit</string>
    <string name="ok">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="category">Category</string>
    <string name="your_cart">Your Cart</string>
    <string name="offers">Offers</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <string name="txtcolor">"Color: "</string>
    <string name="txtsize">"Size: "</string>
    <string name="my_order">My Order</string>
    <string name="my_profile">My Profile</string>
    <string name="shipping_add">Shipping Address</string>
    <string name="setting">Settings</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="product_details">Product Details</string>
    <string name="product_material">Product Material</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="share">Share</string>
    <string name="all">All</string>
    <string name="details_amp_promo"><![CDATA[Details & Promo]]></string>
    <string name="flash_sale">Flash Sale</string>
    <string name="occassion">Occassion</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="cod_available">Cash On Delivery available</string>
    <string name="free_return">7 Day Free Return</string>
    <string name="shippping_charge">0 Shipping Charge</string>
    <string name="more_offers">More Offers</string>
    <string name="about_product">About Product</string>
    <string name="you_may_like">You Might Also Like</string>
    <string name="other_eligible_products">Other Eligible Products</string>
    <string name="dummy_address">2121 Mahavir soci varacha surat 335009 Gujarat</string>
    <string name="use_as_the_shipping_address">Use as the shipping address</string>
    <string name="ship_to">Ship To</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_msg">Are you sure wanna delete address?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success!</string>
    <string name="success_msg">Your order will be delivered soon.</string>
    <string name="thank_you_msg">Thank you for choosing our app!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="next">Next</string>
    <string name="apply_promo">Apply Promo</string>
    <string name="enter_specific_code">Enter Specific Promo</string>
    <string name="kurtis">Kurtis</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="country_or_region">Country or region</string>
    <string name="select_country">Select Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_add">Street Address</string>
    <string name="street_add_2">Street Address 2 (Optional)</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_zip_code">Enter zipcode</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="city">City</string>
    <string name="state">State/Province/Region</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_address_two">Enter Address 2</string>
    <string name="details">Details</string>
    <string name="sales">Sale</string>
    <string name="order_detail">Order Detail</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="delivery_status_change">Delivery Status Change</string>
    <string name="filter_by">Filter By</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="save">Save</string>
    <string name="product">Product</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="address">Address</string>
    <string name="resi_no">Resi No</string>
    <string name="shipping">Shipping</string>
    <string name="date_shipping">Date Shipping</string>
    <string name="payment_details">Payment Details</string>
    <string name="import_charges">Import charges</string>
    <string name="total_price">Total Price</string>
    <string name="order">Order</string>
    <string name="now_or_never">Now Or Never</string>
    <string name="trending">Trending</string>
    <string name="occassion_wear">Occasion Wear</string>
    <string name="promo">Promo</string>
    <string name="apply">Apply</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>


</resources>