<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llActions"
        android:gravity="center">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgConfirmation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/success"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:gravity="center"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/maroon"
        android:fontFamily="@font/montserrat_bold"
        android:layout_below="@id/imgConfirmation"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSuccessMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/success_msg"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_11ssp"
        android:layout_below="@id/txtConfirmation"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_msg"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_11ssp"
            android:layout_below="@id/txtSuccessMsg"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinueShopping"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:text="@string/continue_shopping"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>