<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/let_s_get_started"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/create_a_new_account"
                    android:textColor="@color/light_blue_1"
                    android:textSize="@dimen/_11ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingRight="@dimen/_20sdp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/rounded_editext_border">

                        <ImageView
                            android:id="@+id/imgUser"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_name" />

                        <EditText
                            android:id="@+id/edtFullName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/imgUser"
                            android:layout_toRightOf="@id/imgUser"
                            android:background="@null"
                            android:hint="@string/full_name"
                            android:textColorHint="@color/light_blue_1"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_editext_border">

                        <ImageView
                            android:id="@+id/imgDob"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_dob" />

                        <EditText
                            android:id="@+id/edtDob"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/imgDob"
                            android:layout_toRightOf="@id/imgDob"
                            android:background="@null"
                            android:hint="@string/dob"
                            android:textColorHint="@color/light_blue_1"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_editext_border">

                        <ImageView
                            android:id="@+id/imgEmail"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_mail" />

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/imgEmail"
                            android:layout_toRightOf="@+id/imgEmail"
                            android:background="@null"
                            android:hint="@string/email"
                            android:textColorHint="@color/light_blue_1"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_editext_border">

                        <ImageView
                            android:id="@+id/imgPassword"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="match_parent"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_password" />

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/imgPassword"
                            android:layout_toRightOf="@id/imgPassword"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:textColorHint="@color/light_blue_1"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_editext_border">

                        <ImageView
                            android:id="@+id/username_icon"
                            android:layout_width="@dimen/_36sdp"
                            android:layout_height="match_parent"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/ic_password" />

                        <EditText
                            android:id="@+id/edtReEnterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@id/username_icon"
                            android:layout_toRightOf="@+id/username_icon"
                            android:background="@null"
                            android:inputType="textPassword"
                            android:textColorHint="@color/light_blue_1"
                            android:hint="@string/password_again"/>

                    </RelativeLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/rounded_button"
                        android:onClick="registerUser"
                        android:textAllCaps="false"
                        android:text="@string/sign_up"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_13ssp"
                        android:textColor="@color/white" />


                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_blue_1"
                    android:text="@string/have_an_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="redirectToLogin"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/sign_in"
                    android:textColor="@color/red" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            tools:targetApi="lollipop" />

    </RelativeLayout>


</layout>
