<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:gravity="center"
                android:text="@string/sent_new_password"
                android:textColor="@color/light_blue_1"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingRight="@dimen/_20sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/rounded_editext_border">

                    <ImageView
                        android:padding="@dimen/_10sdp"
                        android:id="@+id/imgEmail"
                        android:src="@drawable/ic_mail"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="match_parent"/>

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_toRightOf="@+id/imgEmail"
                        android:text=""
                        android:hint="@string/email"
                        android:textColorHint="@color/light_blue_1"
                        android:background="@null"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/imgEmail"/>

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/submit"
                    android:onClick="resetPassword"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semibold"
                    android:background="@drawable/rounded_button"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/red"
            android:visibility="gone"
            tools:targetApi="lollipop" />

    </RelativeLayout>


</layout>
