<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.NotificationActivity">

    <RelativeLayout
        android:id="@+id/relToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_toEndOf="@id/imgBack"
            android:layout_toRightOf="@id/imgBack"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/notification"
            android:textSize="@dimen/_18ssp"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSales"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:text="@string/sales"
            android:textColor="@color/maroon"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:theme="@style/SwitchCompatCustomTheme"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:text="@string/new_arrivals"
            android:textColor="@color/maroon"
            android:textSize="@dimen/_12ssp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:theme="@style/SwitchCompatCustomTheme"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMyOrders"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:text="@string/delivery_status_change"
            android:textColor="@color/maroon"
            android:textSize="@dimen/_12ssp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:theme="@style/SwitchCompatCustomTheme"/>

    </LinearLayout>

</LinearLayout>

</layout>
